# peptide-agent

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Drazic2025/: metadata.json
Kaygisiz2025/: metadata.json
Levin2020/: metadata.json
Yang2023/: metadata.json
data/: Peptide_summary-2percent.xlsx  Peptide_summary-all.xlsx  README.md  Readme_experimentaldata.txt  context_examples.json  test_split.csv  train_split.csv
data/archive/: test_save.csv  topk50_batchsize40_gemini2.5pro.csv  topk50_batchsize40_gemini2.5pro_newprompt.csv
data/context_examples/: example1.json
data/index/faiss/: index.faiss  index.pkl
data/relevant_papers/Diaz2021/: metadata.json
data/relevant_papers/Levin2020/: metadata.json
data/relevant_papers/Ma2024/: metadata.json
data/relevant_papers/Qin2023/: metadata.json
data/relevant_papers/Riek2015/: metadata.json
data/relevant_papers/Saiani2008/: metadata.json
data/relevant_papers/Wychowaniec2024/: metadata.json
data/relevant_papers/Yang2025/: metadata.json
data/relevant_papers/Zhao2013/: metadata.json
peptide_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: README.md  eval_test_data.py
src/peptide_agent/: cli.py  config.py  schemas.py
src/peptide_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/peptide_agent/indexing/: faiss_store.py
src/peptide_agent/prompts/: prompt.md
src/peptide_agent/runner/: main.py
src/pipeline/: __version__.py  agent.py  load_metadata.py  main.py  schema.py  schemas.py
src/pipeline/prompts/: prompt.md
tests/: conftest.py  eval_preds.ipynb  test_agent.py  test_agent_testset.py  test_agent_testset_soft.py  test_cli.py  test_error_handling.py  test_integration.py  test_runner.py  test_schemas.py  topk100_batchsize40_gemini2.5flash.csv  topk100_batchsize40_gemini2.5pro_newprompt.csv  topk10_batchsize40_gemini2.5pro_newprompt.csv  topk20_batchsize40_gemini2.5pro_newprompt.csv  topk50_batchsize40_gemini1.5pro.csv  topk50_batchsize40_gemini2.5pro.csv
tests/test_agent_predict/: test_config.yaml  test_requests.json
